--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
     <!-- Masthead-->
     <header
-      class="masthead bg-primary text-white text-center"
+      class="masthead bg-linear-gradient text-white text-center"
       src="assets/img/cover.jpeg"
     >
       <div class="container d-flex align-items-center flex-column">
@@ -106,7 +106,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Software Engineer 
+          Software Engineer | Backend Developer 
         </p>
       </div>
     </header>
@@ -269,7 +269,7 @@
       </div>
     </section>
     <!-- About Section-->
-    <section class="page-section bg-primary text-white mb-0" id="about">
+    <section class="page-section bg-dark text-white mb-0" id="about">
       <div class="container">
         <!-- About Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-white">
