--- a/index.html
+++ b/index.html
@@ -712,7 +712,9 @@
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
                     Aplikasi Daclen adalah aplikasi platform belanja dari daclen yang
-                    dikembangakan dengan bahasa pemerograman java script dalama 
+                    dikembangakan dengan bahasa pemerograman java script dalam
+                    <a href="https://apps.apple.com/id/app/daclen/id6446154160?l=id">Kunjungi Daclen di app store</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.daclen.android&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">Kunjungi Daclen di play store</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -875,6 +877,7 @@
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
                     Website daclen merupakan platform belanja berbasis web yang dikembangan dengan laravel  & vue js 
+                    <a href="https://www.daclen.com">Kunjungi Daclen.com</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -931,7 +934,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    
+                    <a href="https://pabrikkoperfiber.co.id/">Kunjungi pabrikkoperfiber.co.id</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -989,6 +992,7 @@
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
                     Nixtrain.com merupakan website untuk flatform belajar IT dan solusi mengenai IT dikembangkan dengan wordpress
+                    <a href="https://www.nixtrain.com">Kunjungi Nixtrain.com</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
