--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
                     Aplikasi Daclen adalah aplikasi platform belanja dari daclen yang
-                    dikembangakan dengan bahasa pemerograman java script dalam
+                    dikembangakan dengan bahasa pemerograman java script.
                     <a href="https://apps.apple.com/id/app/daclen/id6446154160?l=id">Kunjungi Daclen di app store</a>
                     <a href="https://play.google.com/store/apps/details?id=com.daclen.android&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">Kunjungi Daclen di play store</a>
                   </p>
@@ -934,6 +934,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
+                    Website pabrikkoperfiber merupakan company profile dari produsen koper fiber yang ada dibandung
                     <a href="https://pabrikkoperfiber.co.id/">Kunjungi pabrikkoperfiber.co.id</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
