--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <a
               class="btn btn-outline-light btn-social mx-1"
-              href="https://www.instagram.com/alibnymn_/"
+              href="https://www.instagram.com/albukh_/"
               ><i class="fab fa-fw fa-instagram"></i
             ></a>
             <a
