Update ubah warna tulisan

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <!-- Copyright Section-->
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy;alibnymn.github.io  2024</small>
+        <small>Copyright &copy;alibnymn.github.io 2025</small>
       </div>
     </div>
     <!-- Portfolio Modals-->
@@ -691,7 +691,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Aplikasi Satgas SMKN 4 Padalarang adalah sebuah aplikasi
                     pengelolaan data suhu siswa yang ada di sekolah
                     dikembangakan dengan mengunakan framework laravel 7,
@@ -757,7 +757,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Aplikasi Daclen adalah aplikasi platform belanja dari daclen yang
                     dikembangakan dengan bahasa pemerograman java script.
                     <a href="https://apps.apple.com/id/app/daclen/id6446154160?l=id">Kunjungi Daclen di app store</a>
@@ -862,7 +862,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Aplikasi PERPUS GEMAS adalah aplikasi perpustakaan generasi
                     masa depan dengan teknologi berbasis web dan dikembangkan
                     oleh Framework laravel 7 bahasa pemerograman PHP, HTML , CSS
@@ -922,7 +922,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Website daclen merupakan platform belanja berbasis web yang dikembangan dengan laravel  & vue js 
                     <a href="https://www.daclen.com">Kunjungi Daclen.com</a>
                   </p>
@@ -980,7 +980,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Website pabrikkoperfiber merupakan company profile dari produsen koper fiber yang ada dibandung
                     <a href="https://pabrikkoperfiber.co.id/">Kunjungi pabrikkoperfiber.co.id</a>
                   </p>
@@ -1038,7 +1038,7 @@
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
-                  <p class="mb-4">
+                  <p class="mb-4" style="color: black;">
                     Nixtrain.com merupakan website untuk flatform belajar IT dan solusi mengenai IT dikembangkan dengan wordpress
                     <a href="https://www.nixtrain.com">Kunjungi Nixtrain.com</a>
                   </p>
