--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <meta name="author" content="" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Ali Bunyamin - Software Engineer</title>
+    <title>Ali Bunyamin - QA Engineer</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -153,7 +153,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Software Engineer | Backend Developer | QA Engineer
+          WEB Developer | QA Engineer
         </p>
       </div>
     </header>
@@ -627,7 +627,7 @@
                     APLIKASI SATGAS
                   </h2>
                   <!-- Icon Divider-->
-                  <div class="divider-custom">
+                  <!-- <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
                       <i class="fas fa-star"></i>
@@ -635,7 +635,7 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <img
+                  <!-- <img
                     class="img-fluid rounded mb-5"
                     src="assets/img/portfolio/apk1.png"
                     alt="..."
@@ -689,7 +689,7 @@
                     class="img-fluid rounded mb-5"
                     src="assets/img/portfolio/apk1/edit suhu.png"
                     alt="..."
-                  />
+                  /> -->
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
                     Aplikasi Satgas SMKN 4 Padalarang adalah sebuah aplikasi
@@ -797,70 +797,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg-8">
                   <!-- Portfolio Modal - Title-->
-                  <h2
-                    class="portfolio-modal-title text-secondary text-uppercase mb-0"
-                  >
-                    PERPUS GEMAS
-                  </h2>
-                  <!-- Icon Divider-->
-                  <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon">
-                      <i class="fas fa-star"></i>
-                    </div>
-                    <div class="divider-custom-line"></div>
-                  </div>
-                  <!-- Portfolio Modal - Image-->
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/1.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/2.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/3.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/4.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/5.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/6.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/7.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/8.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/9.jpeg"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk3/10.jpeg"
-                    alt="..."
-                  />
+                  
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
                     Aplikasi PERPUS GEMAS adalah aplikasi perpustakaan generasi
