--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               </div>
               <img
                 class="img-fluid"
-                src="assets/img/portfolio/apk1.png"
+                src="https://docs.google.com/spreadsheets/d/1ek9ojp7XDlzTaLuYdcJPA67JW22T0Yb9cKEc8wfysDc/edit?usp=sharing"
                 alt="..."
               />
             </div>
@@ -624,7 +624,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    APLIKASI SATGAS
+                    Testcase Project
                   </h2>
                   <!-- Icon Divider-->
                   <!-- <div class="divider-custom">
@@ -692,11 +692,8 @@
                   /> -->
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
-                    Aplikasi Satgas SMKN 4 Padalarang adalah sebuah aplikasi
-                    pengelolaan data suhu siswa yang ada di sekolah
-                    dikembangakan dengan mengunakan framework laravel 7,
-                    database MYSQL, dan bahasa pemerograman PHP, CSS, HTML dan
-                    JS.
+                    Ini merupakan salah satu test case project saya pada
+                    saat menghandle aplikasi lino&sons. berikut link nya https://docs.google.com/spreadsheets/d/1ek9ojp7XDlzTaLuYdcJPA67JW22T0Yb9cKEc8wfysDc/edit?usp=sharing
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
