--- a/index.html
+++ b/index.html
@@ -190,11 +190,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img
-                class="img-fluid"
-                src="https://docs.google.com/spreadsheets/d/1ek9ojp7XDlzTaLuYdcJPA67JW22T0Yb9cKEc8wfysDc/edit?usp=sharing"
-                alt="..."
-              />
+              <a>Sample Testcase</a>
             </div>
           </div>
           <!-- Portfolio Item 2-->
