--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <!-- Portfolio Item 1-->
            <div class="col-md-6 col-lg-4 mb-5">
     <div
-        class="portfolio-item mx-auto"
+        class="portfolio-item"
         data-bs-toggle="modal"
         data-bs-target="#portfolioModal1"
     >
