Update porto penambahn api testing & bug report

--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
               >
              <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
               style="background-color: #2c3e50; min-height: 200px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
-              <h4 class="text-white text-center">MANUAL TESTING ARTIFAK</h4>
+              <h4 class="text-white text-center">MANUAL TESTING ARTIFAK <img
+                class="img-fluid"
+                src="assets/img/portfolio/apk1/FormTestCase.jpg"
+                alt="..."
+              /></h4>
              </div>
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
@@ -205,20 +209,26 @@
               data-bs-toggle="modal"
               data-bs-target="#portfolioModal2"
             >
+            <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
+              style="background-color: #2c3e50; min-height: 200px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
+              <h4 class="text-white text-center">Sample API Testing
+                <img
+                class="img-fluid"
+                src="assets/img/portfolio/apk2/ApiTesting.jpg"
+                alt="..."
+              />
+              </h4>
+             </div>
               <div
                 class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
               >
                 <div
                   class="portfolio-item-caption-content text-center text-white"
                 >
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-file-alt fa-3x mb-2"></i>
+                  <p class="mb-0">Lihat Detail Api Testing</p>
                 </div>
               </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/apk2/1.png"
-                alt="..."
-              />
             </div>
           </div>
           <!-- Portfolio Item 3-->
@@ -267,26 +277,31 @@
             </div>
           </div> -->
           <!-- Portfolio Item 4-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-            <div
-              class="portfolio-item mx-auto"
-              data-bs-toggle="modal"
-              data-bs-target="#portfolioModal4"
-            >
+          <div class="col-md-6 col-lg-4 mb-5">
+             <div
+               class="portfolio-item"
+               data-bs-toggle="modal"
+               data-bs-target="#portfolioModal4"
+              >
+             <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
+              style="background-color: #2c3e50; min-height: 200px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
+              <h4 class="text-white text-center">Sample Bug Report <img
+                class="img-fluid"
+                src="assets/img/portfolio/apk4/bugreport.jpg"
+                alt="..."
+              /></h4>
+             </div>
               <div
                 class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
               >
                 <div
-                  class="portfolio-item-caption-content text-center text-white"
-                >
-                  <i class="fas fa-plus fa-3x"></i>
+                class="portfolio-item-caption-content text-center text-white"
+              >
+                <i class="fas fa-file-alt fa-3x mb-2"></i>
+                <p class="mb-0">Lihat Detail Sampel Bug Report</p>
                 </div>
               </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/apk4/1.png"
-                alt="..."
-              />
+              <!--  -->
             </div>
           </div>
           <!-- Portfolio Item 5-->
@@ -654,7 +669,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Daclen APP
+                    Api Testing
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -677,10 +692,8 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
-                    Aplikasi Daclen adalah aplikasi platform belanja dari daclen yang
-                    dikembangakan dengan bahasa pemerograman java script.
-                    <a href="https://apps.apple.com/id/app/daclen/id6446154160?l=id">Kunjungi Daclen di app store</a>
-                    <a href="https://play.google.com/store/apps/details?id=com.daclen.android&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">Kunjungi Daclen di play store</a>
+                    Berikut adalah ringkasan testing api validation
+                    <a href="https://www.postman.com/universal-escape-407064/sample-api-testing/overview">Lihat Detail Keseluruhan Sample Api</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -759,7 +772,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Daclen Website
+                    Bug Report
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -772,13 +785,13 @@
                   <!-- Portfolio Modal - Image-->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk4/1.png"
+                    src="assets/img/portfolio/apk4/bugreport.jpg"
                     alt="..."
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
-                    Website daclen merupakan platform belanja berbasis web yang dikembangan dengan laravel  & vue js 
-                    <a href="https://www.daclen.com">Kunjungi Daclen.com</a>
+                    Sample Bug report yang pernah saya buat pada saat project app LINO & SONS 
+                    <a href="https://docs.google.com/document/d/1nSBSSsxFwvOtiLi5KdCLR7h0F4b_yQCZ8Le3Ok_2OQk/edit?usp=sharing">Lihat Bug Report</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
