Perubahan tampilan portofolio part1

--- a/index.html
+++ b/index.html
@@ -240,7 +240,11 @@
               >
              <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
               style="background-color: #2c3e50; min-height: 200px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
-              <h4 class="text-white text-center">Automation Testing</h4>
+              <h4 class="text-white text-center">Automation Testing<img
+                class="img-fluid"
+                src="assets/img/portfolio/apk3/2.jpg"
+                alt="..."
+              /></h4>
              </div>
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
@@ -254,28 +258,6 @@
             </div>
            </div>
           </div>
-          <!-- <div class="col-md-6 col-lg-4 mb-5">
-            <div
-              class="portfolio-item mx-auto"
-              data-bs-toggle="modal"
-              data-bs-target="#portfolioModal3"
-            >
-              <div
-                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
-              >
-                <div
-                  class="portfolio-item-caption-content text-center text-white"
-                >
-                  <i class="fas fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/apk3/1.png"
-                alt="..."
-              />
-            </div>
-          </div> -->
           <!-- Portfolio Item 4-->
           <div class="col-md-6 col-lg-4 mb-5">
              <div
@@ -305,26 +287,26 @@
             </div>
           </div>
           <!-- Portfolio Item 5-->
-          <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+          <div class="col-md-6 col-lg-4 mb-5">
             <div
               class="portfolio-item mx-auto"
               data-bs-toggle="modal"
               data-bs-target="#portfolioModal5"
             >
+            <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
+              style="background-color: #2c3e50; min-height: 100px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
+              <h4 class="text-white text-center">Kumpulan Web & App</h4>
+            </div>
               <div
                 class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
               >
                 <div
                   class="portfolio-item-caption-content text-center text-white"
                 >
-                  <i class="fas fa-plus fa-3x"></i>
+                  <i class="fas fa-file-alt fa-3x mb-2"></i>
+                <p class="mb-0">Lihat Detail Web & App</p>
                 </div>
               </div>
-              <img
-                class="img-fluid"
-                src="assets/img/portfolio/apk5/1.png"
-                alt="..."
-              />
             </div>
           </div>
           <!-- Portfolio Item 6-->
@@ -336,7 +318,11 @@
               >
              <div class="d-flex align-items-center justify-content-center h-100 w-100 p-3" 
               style="background-color: #2c3e50; min-height: 200px; color: white; border-radius: 0.5rem; border: 2px solid #1abc9c;">
-              <h4 class="text-white text-center">TEST PLAN</h4>
+              <h4 class="text-white text-center">TEST PLAN <img
+                class="img-fluid"
+                src="assets/img/portfolio/apk6/1.jpg"
+                alt="..."
+              /></h4>
              </div>
           <div
             class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
@@ -564,7 +550,7 @@
                     Testcase Project
                   </h2>
                   <!-- Icon Divider-->
-                  <!-- <div class="divider-custom">
+                   <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon">
                       <i class="fas fa-star"></i>
@@ -572,65 +558,20 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <!-- <img
+                  <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1.png"
+                    src="assets/img/portfolio/apk1/FormTestCase.jpg"
                     alt="..."
                   />
                   <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/login.png"
+                    src="assets/img/portfolio/apk1/1.jpg"
                     alt="..."
                   />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/petugas.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/tambah petugas.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/edit petugas.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/siswa admin.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/tambah siswa.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/edit siswa.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/suhu admin.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/tambah suhu.png"
-                    alt="..."
-                  />
-                  <img
-                    class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk1/edit suhu.png"
-                    alt="..."
-                  /> -->
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
                     Ini merupakan salah satu test case project saya pada
-                    saat menghandle aplikasi lino&sons. <a href=" https://docs.google.com/spreadsheets/d/1ek9ojp7XDlzTaLuYdcJPA67JW22T0Yb9cKEc8wfysDc/edit?usp=sharing">Lihat Test Case</a>
+                    saat menghandle  QA aplikasi LINO & SONS. <a href=" https://docs.google.com/spreadsheets/d/1ek9ojp7XDlzTaLuYdcJPA67JW22T0Yb9cKEc8wfysDc/edit?usp=sharing">Lihat Test Case</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -729,10 +670,33 @@
               <div class="row justify-content-center">
                 <div class="col-lg-8">
                   <!-- Portfolio Modal - Title-->
-                  
+                  <h2
+                    class="portfolio-modal-title text-secondary text-uppercase mb-0"
+                  >
+                    Automation-playwright-project
+                  </h2>
+                  <!-- Icon Divider-->
+                  <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+                  <!-- Portfolio Modal - Image-->
+                  <img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk3/1.jpg"
+                    alt="..."
+                  />
+                  <img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk3/2.jpg"
+                    alt="..."
+                  />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
-                    Berikut adalah Automation testing 
+                    Berikut adalah Detail testing dengan Automation-playwright-project
                   <a href=" https://github.com/alibnymn/Automation-playwright-project.git">Lihat Automation</a>
                     </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -830,7 +794,7 @@
                   <h2
                     class="portfolio-modal-title text-secondary text-uppercase mb-0"
                   >
-                    Pabrik Koper Fiber
+                    Kumpulan Web & APP yang pernah dihandle
                   </h2>
                   <!-- Icon Divider-->
                   <div class="divider-custom">
@@ -850,6 +814,30 @@
                   <p class="mb-4" style="color: black;">
                     Website pabrikkoperfiber merupakan company profile dari produsen koper fiber yang ada dibandung
                     <a href="https://pabrikkoperfiber.co.id/">Kunjungi pabrikkoperfiber.co.id</a>
+                  </p>
+                  <!-- Portfolio Modal - Image-->
+                  <img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk5/2.jpg"
+                    alt="..."
+                  />
+                  <!-- Portfolio Modal - Text-->
+                  <p class="mb-4" style="color: black;">
+                    Website adipura merupakan company profile dari Produsen tas custom terpercaya sejak 2004
+                    <a href="https://adipuramandiri.com/">Kunjungi adipuramandiri.com</a>
+                  </p>
+                  <!-- Portfolio Modal - Image-->
+                  <center><img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk5/1.jpg"
+                    alt="..."
+                  /></center>
+                  <!-- Portfolio Modal - Text-->
+                  <p class="mb-4" style="color: black;">
+                    Daclen App merupakan aplikasi e-commerce tas
+                    <a href="https://play.google.com/store/apps/details?id=com.daclen.android&pcampaignid=web_share">Kunjungi Daclen App</a>
+                    dan Daclen.com merupakan website e-commerce tas
+                    <a href="https://daclen.com/">Kunjungi Daclen Web</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
@@ -899,11 +887,16 @@
                     <div class="divider-custom-line"></div>
                   </div>
                   <!-- Portfolio Modal - Image-->
-                  <!-- <img
+                  <img
                     class="img-fluid rounded mb-5"
-                    src="assets/img/portfolio/apk6/1.png"
+                    src="assets/img/portfolio/apk6/1.jpg"
                     alt="..."
-                  /> -->
+                  />
+                  <img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk6/2.jpg"
+                    alt="..."
+                  />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4" style="color: black;">
                     Berikut adalah contoh test plan project saya ketika menghandle project lino&sons mobile app.
