Penyesuaian Image portofolio

--- a/index.html
+++ b/index.html
@@ -827,6 +827,17 @@
                     <a href="https://adipuramandiri.com/">Kunjungi adipuramandiri.com</a>
                   </p>
                   <!-- Portfolio Modal - Image-->
+                  <img
+                    class="img-fluid rounded mb-5"
+                    src="assets/img/portfolio/apk5/daclen.png"
+                    alt="..."
+                  />
+                  <!-- Portfolio Modal - Text-->
+                  <p class="mb-4" style="color: black;">
+                   Daclen.com merupakan website e-commerce tas
+                    <a href="https://daclen.com/">Kunjungi Daclen Web</a>
+                  </p>
+                  <!-- Portfolio Modal - Image-->
                   <center><img
                     class="img-fluid rounded mb-5"
                     src="assets/img/portfolio/apk5/1.jpg"
@@ -836,8 +847,6 @@
                   <p class="mb-4" style="color: black;">
                     Daclen App merupakan aplikasi e-commerce tas
                     <a href="https://play.google.com/store/apps/details?id=com.daclen.android&pcampaignid=web_share">Kunjungi Daclen App</a>
-                    dan Daclen.com merupakan website e-commerce tas
-                    <a href="https://daclen.com/">Kunjungi Daclen Web</a>
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
